# autoremesher-wasm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
cpp/autoremesher/: SUPPORTERS
cpp/autoremesher/shaders/: monochrome.frag  monochrome.vert  monochrome_core.frag  monochrome_core.vert
emscripten/: bindings.cpp  build.sh
emscripten/compat/: wasm_compat.h
emscripten/overrides/: autoremesher_core.cpp  geogram_common.cpp
emscripten/qt-shim/: QDebug
emscripten/tbb-shim/tbb/: blocked_range.h  combinable.h  mutex.h  parallel_for.h
emscripten/tbb-shim/tbb/detail/: thread_pool.h
examples/: node-remesh.mjs
examples/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/web/src/: index.css  main.tsx  remesh-mesh.ts  remesh-studio.tsx  remesh.worker.ts
lib/cjs/: geometry.js  gltf.js  glue-loader.js  index.js  module.js  obj.js  three.js  transfer.js  types.js
lib/esm/: geometry.js  gltf.js  glue-loader.js  index.js  module.js  obj.js  three.js  transfer.js  types.js
lib/types/: geometry.d.ts  gltf.d.ts  glue-loader.d.ts  index.d.ts  module.d.ts  obj.d.ts  three.d.ts  transfer.d.ts  types.d.ts
scripts/: patch-glue.mjs  postbuild.mjs
src/: geometry.ts  gltf.ts  glue-loader.ts  index.ts  module.ts  obj.ts  three.ts  transfer.ts  types.ts  wasm-module.d.ts
test/: fixtures.mjs  formats.test.mjs  phase2.test.mjs  remesh.test.mjs
wasm/: autoremesher-mt.mjs  autoremesher-mt.wasm  autoremesher.mjs  autoremesher.wasm
